--- a/webscraping_basic/1_html.html
+++ b/webscraping_basic/1_html.html
@@ -5,7 +5,7 @@
     <title>홈페이지</title>
   </head>
   <body>
-    <input type="text" value="input the id" />
+    <input type="text" value="아이디 입력" />
     <input type="password" />
     <input type="button" value="로그인" />
     <a href="http://google.com">구글로 이동하기</a>
